Website/AirbnbNegotiate/Negot/static/Negot/css/style.css
/* ... */
.navbar-brand {
    font-size: 1.8em;
    font-weight: 800;
}

.nav > li > a:hover,
.nav > li > a:focus {
    background-color: #ffc107;
}

.navbar-toggle {
    padding: 4px 0 0 0;
}

.menu-btn {
    -webkit-transition: color 0.3s ease;
    transition: color 0.3s ease;
}


/* CONTENT */

/* hero image */

.hero-background {
    height: 400px;
    left: 0;
    overflow-x: hidden;
    overflow-y: hidden;
    position: absolute;
    top: 0;
    width: 100%;
}

.hero-img {
    height: 100%;
    left: 0;
    min-width: 100%;
    position: absolute;
    top: 0;
    vertical-align: middle;
    z-index: -1;
}


/* search box */

.hero-search {
    position: relative;
    top: 36px;
}

.search-form--box {
    background-color: rgba(255, 255, 255, 0.6);
    height: 268px;
    padding-top: 32px;
    width: 100%;
}

.form-control {
    color: #212121;
    height: 40px;
    padding-left: 32px;
}

.form-calendar {
    height: 40px;
}

.form-calendar--left {
    float: left;
    width: 52%;
}

.form-calendar--right {
    float: left;
    width: 48%;
}

.form-control[disabled],
.form-control[readonly],
fieldset[disabled] .form-control {
    background-color: #fff;
}

input[name="location"] {
    cursor: default;
}

input[name="location"]::-moz-placeholder {
    color: #212121;
}

input[name="location"]::-webkit-placeholder {
    color: #212121;
}

input[name="location"]::-ms-placeholder {
    color: #212121;
}

.material-icons.search-icon {
    color: #ff5252;
    font-size: 1.3em;
    left: 20px;
    position: absolute;
    top: 9px;
}

.material-icons.bed {
    left: 22px;
    top: 24px;
}

.check-in {
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
}

.check-out {
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
    padding-left: 12px;
}

.bootstrap-datetimepicker-widget table td.active,
.bootstrap-datetimepicker-widget table td.active:hover {
    background-color: #ff5252;
}

.bootstrap-datetimepicker-widget table td.today::before {
    border-color: rgba(0, 0, 0, 0.2) transparent #ff5252;
}

.search-btn {
    background-color: #ffa000;
    border: none;
    color: #fff;
    font-weight: 600;
    height: 40px;
    width: 100%;
}

.search-btn:hover {
    background-color: #ff5252;
    border: none;
}
select.form-control {
    -webkit-appearance: none;
    cursor: pointer;
}


/* Payoff */

.payoff {
    position: relative;
    top: 100px;
}

.payoff h1 {
    font-size: 1.3em;
    line-height: 1.6;
    text-align: center;
}


/* Tutorial */

.tutorial {
    position: relative;
    top: 100px;
}

.tutorial-title {
    color: #ffa000;
    font-size: 1.8em;
    font-weight: 800;
    margin: 60px 0 30px;
}

.tutorial-copy {
    font-size: 1.1em;
    margin-bottom: 40px;
}

.tutorial-copy strong {
    margin-left: 15px;
}

.tutorial-number {
    border: 2px solid #ff5252;
    border-radius: 50%;
    color: #ff5252;
    font-size: 1.2em;
    padding: 1px 11px 4px;
    position: relative;
}

/* Modal */

.modal-header {
    border: none;
    padding: 10px 15px 0;
}
.modal-body .form-control {
    padding-left: 14px;
}
.modal-copy {
    margin-bottom: 25px;
    text-align: center;
}
.modal-firstblock {
    border-bottom: 1px solid #ffa000;
    padding-bottom: 30px;
}
.modal-secondblock {
    position: relative;
    top: -22px;
}
.btn-google {
    background-color: #fff;
    border: 1px solid rgb(204,204,204);
    border-radius: 2px;
    color: rgba(0,0,0,0.54);
    font-family: 'Roboto', sans-serif;
    font-size: 14px;
}
.btn-google img {
    height: 90%;
    margin-right: 10px;
}
.btn-google:hover {
    background-color: #fff;
    border: 1px solid rgb(204,204,204);
    color: rgba(0,0,0,0.54);
}
.checkbox {
    opacity: 1;
    -webkit-transition: opacity 0.3s ease;
    transition: opacity 0.3s ease;
}
.remember-me {
    font-size: 0.85em;
}
.or {
    background-color: #fff;
    padding: 0 24px;
}
.btn-block + .btn-block {
    margin-top: 0;
}
.signup-btn {
    background-color: #ff5454;
    display: none;
}
.signup-btn:hover {
    background-color: #ffa000;
}
.hidden-check {
    opacity: 0;
}
.signup {
    cursor: pointer;
    text-decoration: underline;
}
.signup-psw {
    display: none;
}

/* RESULT PAGE */

.results-content {
    margin-bottom: 100px;
}


/* filters */

.filters-btn {
    background-color: #ff5252;
    border-radius: 2px;
    bottom: 20px;
    left: 4%;
    position: fixed;
    width: 92%;
    z-index: 99;
}
.filters {
    border-bottom: 1px solid #b6b6b6;
    font-size: 0.9em;
    margin-bottom: 40px;
}

.filters-title {
    font-weight: 600;
    margin: 30px 0 20px;
}

.filters-section {
    margin-bottom: 10px;
}

.filters-label {
    font-weight: 600;
}

.filters-radio {
    padding-left: 0;
}

.filters-high--range {
    text-align: right;
}

.filters-location {
    margin-bottom: 0;
}

.filters-more {
    border-top: 1px solid #212121;
    display: none;
    padding-top: 20px;
}
.filters-more .col-sm-11 {
    margin-bottom: 5px;
}

.slider.slider-horizontal {
    width: 100%;
}

.slider-selection {
    background: #ffc107;
}

.slider-handle {
    background: #fff;
    border: 1.5px solid #212121;
    height: 23px;
    width: 23px;
}

.slider.slider-horizontal .slider-tick,
.slider.slider-horizontal .slider-handle {
    margin-top: -7px;
}

.other {
    color: #b6b6b6;
    cursor: pointer;
    margin-top: 5px;
}


/* listings */

.listings {
    padding: 0;
    width: 100%;
}

.clearfix {
    margin-bottom: 50px;
}

.listings-header--location {
    color: #ff5252;
    font-size: 2.2em;
    font-weight: 800;
    margin-bottom: 25px;
}

.listings-header--copy {
    font-size: 1.1em;
    font-weight: 600;
    line-height: 1.2;
    margin-bottom: 20px;
}

.listings-header--btn {
    width: 100%;
}

.listing-list--item {
    border: 2px solid #b6b6b6;
    border-radius: 2px;
    box-shadow: 0 1px 4px rgba(182, 182, 182, 0.4);
    height: 192px;
    margin-bottom: 20px;
    padding: 20px;
}
/* ... */

